syntax = "proto3";

package opentelemetry.proto.common.v1;

message AnyValue {
  oneof value {
    string string_value = 1;
    bool bool_value = 2;
    int64 int_value = 3;
    double double_value = 4;
    ArrayValue array_value = 5;
    KeyValueList kvlist_value = 6;
  }
}

message ArrayValue { repeated AnyValue values = 1; }
message KeyValue { string key = 1; AnyValue value = 2; }
message KeyValueList { repeated KeyValue values = 1; }

message InstrumentationScope { string name = 1; string version = 2; }
